[UI] DQT dropdown visibility issue (#6602)
Updated a css rule to improve the visibility of some dropdown elements

    Resolves #6584

--- a/htdocs/bootstrap/css/custom-css.css
+++ b/htdocs/bootstrap/css/custom-css.css
@@ -808,7 +808,7 @@ a:hover {
 .list-group-item.active,
 .list-group-item.active:hover {
     z-index: 2;
-    color: white;
+    color: black;
     background-color: #E4EBF2;
     border-color: #E4EBF2;
 }
